# spacecat-discord-bot

./: .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  config.ini  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.cfg  setup.py  spacecat.py
helpers/: appearance.py  beautify.py  dataclasses.py  module_handler.py  perms.py
modules/: administration.py  alexa.py  configuration.py  dad.py  dritic.py  errorhandler.py  politecat.py  seethreepio.py  trashpanda.py
scripts/: config_admins.py  refactor_database.py
spacecat/: __init__.py  __main__.py  cli.py  instance.py  spacecat.py
spacecat/helpers/: __init__.py  command.py  config.py  console.py  constants.py  module_handler.py  output.py  paginator.py  permissions.py  perms.py  reaction_buttons.py  settings.py  spotify_extended_support.py  views.py
spacecat/modules/: __init__.py  administration.py  alexa.py  automation.py  configuration.py  dad.py  errorhandler.py  help.py  linkle.py  musicbox.py  politecat.py  scheduler.py  seethreepio.py
spacecat/modules/automation/: __init__.py  automation.py  event_scheduler.py  reminder_scheduler.py  scheduler.py
spacecat/modules/automation/actions/: __init__.py  broadcast_action.py  channelprivate_action.py  channelpublic_action.py  message_action.py  voicekick_action.py  voicemove_action.py
spacecat/modules/musicbox/: music_player.py  musicbox.py  playlist.py
spacecat/modules/musicbox/players/: wavelink_player.py
spacecat/modules/musicbox/wavelink_player/: wavelink_player.py
src/spacecat/: __main__.py
src/spacecat/core/: __init__.py  engine.py  interfaces.py  logger.py  registry.py
src/spacecat/core/automation/: event_service.py  reminder_service.py  scheduler.py  task_service.py
src/spacecat/core/features/: automation.py  fun.py  knowledge.py  scheduler.py  social.py  utility.py
src/spacecat/core/models/: actions.py  events.py  reminders.py  tasks.py
