[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecat"
version = "0.4.0"
description = "A self hostable modular Discord bot."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Mizarc", email = "contact@mizarc.dev" }
]
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Communications :: Chat",
]

# --- CORE DEPENDENCIES ---
# These are required regardless of the platform
dependencies = [
    "beautifulsoup4==4.14.3",
    "Pillow>=12.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "qrcode==8.2",
    "requests==2.32.5",
    "simpleeval==1.0.7",
    "toml==0.10.2",
    "tortoise-orm==1.1.6"
]

# --- OPTIONAL PLATFORMS ---
[project.optional-dependencies]
discord = [
    "discord.py[voice]",
    "Wavelink~=3.0",
    "yt-dlp",
    "youtube-dl",
]
fluxer = [
    "fluxer.py",
]
# Install everything (Discord + Fluxer + Dev tools)
all = [
    "spacecat[discord,fluxer,dev]",
]
dev = [
    "ruff==0.15.6",
]

[project.urls]
Homepage = "https://gitlab.com/Mizarc/spacecat-discord-bot"

[project.scripts]
spacecat = "spacecat.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Disable one line before class. Using no lines before class instead.
    "D212", # Disable multi line summary first line. Using second line instead.
    "COM812", # Disable due to conflict with formatter.
    "ISC001", # Disable due to conflict with formatter.
    "PLR0913" # Disable too many arguments.
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["spacecat"]